# kaggle-cell-tracking-competition

./: .gitignore  LICENSE  README.md  metrics.md  pyproject.toml
scripts/: augmentations.py  dataspec.py  evaluate.py  predict_unet_transformer.py  train_unet_transformer.py
src/tracking_cellmot/: __init__.py  division_metrics.py  img_proc.py  io.py  metrics.py
src/tracking_cellmot/models/: __init__.py  simple_node_transformer.py  temporal_unet.py
tests/: conftest.py  test_division_metrics.py  test_division_sandbox_examples.py  test_img_proc.py  test_io.py  test_metrics.py  test_training_scripts.py
visualize/: visualize_ground_truth.py  visualize_predictions.py  visualize_utils.py
