[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "tracking-cellmot"
version = "0.1.0"
description = "Cell tracking utilities: I/O, metrics, and transformer-based edge prediction"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "BSD-3-Clause"
dependencies = [
    "torch>=2.9.1",
    "tracksdata @ git+https://github.com/royerlab/tracksdata@main",
    "zarr>=3.0.10",
    "scipy",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
]
viz = [
    "napari>=0.5",
    "pyqt5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow — deselect with '-m \"not slow\"'",
]

[tool.ruff]
target-version = "py311"
src = ["src"]
line-length = 120

[tool.ruff.lint]
pydocstyle = { convention = "numpy" }
ignore = ["E712"]
select = [
    "E",    # style errors
    "W",    # style warnings
    "F",    # flakes
    "D417", # Missing argument descriptions in Docstrings
    "I",    # isort
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "A001", # flake8-builtins
    "RUF",  # ruff-specific rules
    "TID",  # flake8-tidy-imports
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D", "S"]

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = false
